2004-09-12 Alain Magloire
	Since MISession is attach to the Target, the
	way we fire termination events must change also.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/ProcessManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* src/org/eclipse/cdt/debug/mi/core/MISession.java

2004-09-09 Alain Magloire
	Introduction of new classes in the CDI interface
		ICDIExecuteStep
		ICDIExecuteStepReturn
		ICDIExecuteResume
		ICDISuspend
		ICDIThreadGroup
	The code is adjust to the new demands.

2004-09-07 Alain Magloire

	Remove ICDIBreakpointManager class
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointHit.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/WatchpointScope.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/WatchpointTrigger.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Breakpoint.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java

2004-09-06 Alain Magloire

	The changes is move the MISession as part
	of Target.  The rationale; we want to have
	        Session
	   ---------------
	   |             |
	  Target(gdb)   Target(gdb)
	To be able to do this we need to untie the MISession
	from Session.

	Also we are moving toward retiring the ICDIXXXXManager
	and move the methods in the the proper methods.

2004-09-01 Alain Magloire

	Fix for 72974
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2004-08-14 Alain Magloire

	Fix for 71992.
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-08-05 Alain Magloire

	Tentative Fix for PR 69991
	* src/org/eclipse/cdt/debug/mi/core/RxThread.java

2004-07-22 Alain Magloire

	Fix for PR 70688
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-07-12 Alain Magloire
