@@ -1,3 +1,10 @@
+2004-09-15 Alain Magloire
+
+	The correct thread was not set.
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/ExpressionManager.java
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
+	
 2004-09-12 Alain Magloire
 	Since MISession is attach to the Target, the
 	way we fire termination events must change also.
